--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@vercel/analytics": "^1.5.0",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
