--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.477.0",
     "next": "^15.0.1",
