--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -40,6 +41,7 @@
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.1",
     "openai": "^4.91.1",
     "posthog-js": "^1.225.1",
     "react": "^18.3.1",
