--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
