feat: Enhance question management and introduce category functionality
This commit introduces several improvements to the question management system, including:

- Updated the `questions` schema to include a `category` field for better organization.
- Implemented category selection in the AI question generator, allowing questions to be categorized based on tags.
- Added a new `CategorySelector` component for users to select question categories.
- Enhanced the `getNextQuestions` query to filter questions by category.
- Introduced a Python script for populating categories in existing questions.
- Updated the UI to reflect category selection and improve user experience with a modern question card design.

These changes aim to improve the overall functionality and user experience of the question management system.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@convex-dev/auth": "^0.0.80",
     "clsx": "^2.1.1",
-    "convex": "1.21.1-alpha.1",
+    "convex": "^1.21.1-alpha.1",
     "framer-motion": "^12.10.4",
+    "lucide-react": "^0.542.0",
     "openai": "^4.104.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
