--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "tailwind-merge": "^3.1.0"
   },
   "overrides": {
-    "convex": "1.21.1-alpha.1"
+    "convex": "^1.21.1-alpha.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
