--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.21.1-alpha.1",
+    "convex-helpers": "^0.1.105",
     "framer-motion": "^12.10.4",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.542.0",
