--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/node": "^5.5.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.21.1-alpha.1",
@@ -36,6 +37,7 @@
     "react-router-dom": "^7.10.0",
     "resend": "^6.1.1",
     "sonner": "^2.0.3",
+    "svix": "^1.82.0",
     "tailwind-merge": "^3.1.0",
     "vaul": "^1.1.2"
   },
