feat: enhance API error handling and update Vercel configuration
- Added a new `functions` entry in `vercel.json` to include `dist/index.html` for the API function.
- Updated the import path in `api/question.ts` for better module resolution.
- Improved error handling in the API to provide more informative messages when `index.html` is not found.

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "api/question.ts": {
+      "includeFiles": "dist/index.html"
+    }
+  },
   "rewrites": [
     {
       "source": "/question/:id",
