Update Workbox caching configuration in vercel.json
- Modified the source pattern for Workbox caching from "/workbox-*.js" to "/workbox-(.*).js" to enhance flexibility in matching Workbox scripts.

This change improves the asset caching strategy, ensuring better performance and reliability for the application.

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       ]
     },
     {
-      "source": "/workbox-*.js",
+      "source": "/workbox-(.*).js",
       "headers": [
         {
           "key": "Cache-Control",
