Add new icons module and update import paths for iconMap
- Introduced a new `icons.ts` file in the `api/lib` directory to centralize icon imports.
- Updated import paths for `iconMap` in `og_question.ts` and `og.ts` to reference the new icons module.
- Added new function configurations in `vercel.json` to include the icons file for serverless functions.

These changes enhance code organization and maintainability by consolidating icon management.

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,12 @@
   "functions": {
     "api/question.ts": {
       "includeFiles": "dist/index.html"
+    },
+    "api/og_question.ts": {
+      "includeFiles": "src/components/ui/icons/icons.tsx"
+    },
+    "api/og.ts": {
+      "includeFiles": "src/components/ui/icons/icons.tsx"
     }
   },
   "rewrites": [
